--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,26 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
     --body-bacground-color: rgb(253, 248, 241);
-    --h1-gradient:linear-gradient(to right,rgba(255, 166, 0),rgb(255, 170, 199));
+    --title-gradient:linear-gradient(to right,rgba(255, 166, 0),rgb(255, 170, 199));
+    --title-text-color: aliceblue;
+    --title-shadow: rgba(255, 192, 203, 0.288);
     --p-gradient:linear-gradient(to right,rgba(255, 243, 227, 0.7),rgba(255, 255, 255, 0.3));
     --p-border: rgba(51, 51, 51, 0.4);
+    --p-tag: orange;
+    --text-color: crimson;
+    --link-color: darkred;
+    --bubble-shadow: rgba(255, 0, 221, 0.226);
+    --bubble-border: red;
+    --bubble-background:rgb(255, 255, 255);
+    --bubble-hover:conic-gradient(hotpink,red,orange,yellow,lime,turquoise,indigo,violet);
+    --div-gradient: rgba(255, 255, 255, 0.8), rgba(241, 241, 241, 0.6) 49%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.6) 49%;
+    --div-border: rgba(255, 255, 255, 0.685);
+    --div-scroll-thumb:rgba(255, 192, 203, 0.562);
+    --h2-shadow: rgba(255, 192, 203, 0.349);
+    --h2-gradient: transparent, rgba(255, 255, 255, 0.425);
 
+    --background-anim-center: rgb(0, 225, 255);
+    --background-anim-shadows: -250px -250px hotpink, -250px 0px red, -250px 250px orange, 0px -250px yellow, 0px 250px lime, 250px -250px turquoise, 250px 0px indigo, 250px 250px violet;
 }
 body{
     background: var(--body-bacground-color);
@@ -14,19 +30,19 @@ h1{
     font-weight: bold;
     text-align: center;
     font-size: 50;
-    background: var(--h1-gradient);
-    color: aliceblue;
+    background: var(title-gradient);
+    color: var(---title-text-color);
     margin-left: 35%;
     margin-right: 35%;
     padding: 20px;
     -moz-padding:2px;
     border-radius: 35px 0 35px 0;
-    -webkit-box-shadow: 5px 5px 1px rgba(255, 192, 203, 0.288);
-            box-shadow: 5px 5px 1px rgba(255, 192, 203, 0.288);
+    -webkit-box-shadow: 5px 5px 1px var(--title-shadow);
+            box-shadow: 5px 5px 1px var(--title-shadow);
 }
 
 p{
-    color:chocolate;
+    color:var(--text-color);
     position:relative;
     background: var(--p-gradient);
     margin-left: 75px;
@@ -37,7 +53,7 @@ p{
 }
 p::before{
     content: '';
-    background: orange;
+    background: var(--p-tag);
     position:absolute;
     left: -20px;
     top: 0px;
@@ -47,7 +63,7 @@ p::before{
     border-bottom: 2px var(--p-border) solid;
 }
 small{
-    color: brown;
+    color: var(--text-color);
     margin-left: 100px;
     margin-right: -40px;
     background: var(--p-gradient);
@@ -56,28 +72,28 @@ small{
     border-bottom: var(--p-border) solid;
 }
 h2{
-    color: crimson;
+    color: var(--text-color);
     text-align: center;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(transparent), to(rgba(255, 255, 255, 0.425)));
-    background-image: -o-linear-gradient(transparent, rgba(255, 255, 255, 0.425));
-    background-image: linear-gradient(transparent, rgba(255, 255, 255, 0.425));
+    background-image: -webkit-linear-gradient( var(--h2-gradient));
+    background-image: -o-linear-gradient(var(--h2-gradient));
+    background-image: linear-gradient(var(--h2-gradient));
     padding-top: 1em;
     margin-left: 40%;
     margin-right: 40%;
     height: 2em;
-    -webkit-box-shadow: 5px 5px 15px rgba(255, 192, 203, 0.349);
-            box-shadow: 5px 5px 15px rgba(255, 192, 203, 0.349);
+    -webkit-box-shadow: 5px 5px 15px var(--h2-shadow);
+            box-shadow: 5px 5px 15px var(--h2-shadow);
 }
 div{
-    background-image: -o-repeating-linear-gradient(135deg, rgba(255, 255, 255, 0.8), rgba(241, 241, 241, 0.6) 49%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.6) 49%) ;
-    background-image: repeating-linear-gradient(-45deg, rgba(255, 255, 255, 0.8), rgba(241, 241, 241, 0.6) 49%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.6) 49%) ;
+    background-image: -o-repeating-linear-gradient(135deg, var(--div-gradient)) ;
+    background-image: repeating-linear-gradient(-45deg, var(--div-gradient)) ;
     line-height: 40px;
     
     margin-left: 10%;
     margin-right: 10%;
     text-align:center;
     padding: 10px;
-    border: rgba(255, 255, 255, 0.685) 2px solid;
+    border: var(--div-border) 2px solid;
     border-radius: 0 50px 0 50px;
     max-height: 1000px;
     overflow-y: scroll;
@@ -93,11 +109,11 @@ div::-webkit-scrollbar-track{
     
 }
 div::-webkit-scrollbar-thumb{
-    background-color: rgba(255, 192, 203, 0.562);
+    background-color: var(--div-scroll-thumb);
     border-radius: 1em;
 }
 a{
-    color: darkred;
+    color: var(--link-color);
 }
 div > a{
     position: relative;
@@ -110,8 +126,8 @@ div > a{
     line-height: 20px;
     -webkit-text-decoration-line: none;
             text-decoration-line: none;
-    -webkit-box-shadow: 2px 5px 5px rgba(255, 0, 221, 0.226);
-            box-shadow: 2px 5px 5px rgba(255, 0, 221, 0.226);
+    -webkit-box-shadow: 2px 5px 5px var(--bubble-shadow);
+            box-shadow: 2px 5px 5px var(--bubble-shadow);
     
     overflow: hidden;
 }
@@ -122,11 +138,11 @@ div > a::before{
     height: 200%;
     left: -50%;
     top: -50%;
-    background-color: red;
+    background-color: var(--bubble-border);
     z-index: -2;
 }
 div > a::after{
-    background-color:rgb(255, 255, 255);
+    background-color:var(--bubble-background);
     content: '';
     position: absolute;
     display: inline-block;
@@ -151,7 +167,7 @@ div > a:hover::before{
     height: 1000px;
     top: calc(-500px + 50%);
     left: -50%;
-    background-image: conic-gradient(hotpink,red,orange,yellow,lime,turquoise,indigo,violet);
+    background-image: var(--bubble-hover);
     -webkit-transform-origin: center;
         -ms-transform-origin: center;
             transform-origin: center;
@@ -171,7 +187,7 @@ h1::before{
     left: 50%;
     top: 50%;
     border-radius: 50%;
-    background-color: rgb(0, 225, 255);
+    background-color: var(--background-anim-center);
 
     -webkit-animation: animate 20s linear infinite;
 
@@ -180,9 +196,9 @@ h1::before{
             filter: blur(100px);
     z-index: -1;
 
-    -webkit-box-shadow: -250px -250px hotpink, -250px 0px red, -250px 250px orange, 0px -250px yellow, 0px 250px lime, 250px -250px turquoise, 250px 0px indigo, 250px 250px violet;
+    -webkit-box-shadow: var(--background-anim-shadows);
 
-            box-shadow: -250px -250px hotpink, -250px 0px red, -250px 250px orange, 0px -250px yellow, 0px 250px lime, 250px -250px turquoise, 250px 0px indigo, 250px 250px violet;
+            box-shadow: var(--background-anim-shadows);
     opacity: 40%;
     scale: 2;
 }
