remove .git suffix from links

--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -12,7 +12,7 @@
   <p>The following apps on F-Droid joined Hacktoberfest:</p>
   <div>
   {% for app in apps | sort(attribute='name') %}
-    <a href="{{ app.repo }}">{{ app.name }}</a>
+    <a href="{{ app.link }}">{{ app.name }}</a>
   {% endfor %}
   </div>
 </body>
