--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Droidtoberfest</h1>
+  <header class="page-header">
+    <h1>Droidtoberfest</h1>
+  </header>
   <p>This website scans multiple FOSS app sources for projects joining Hacktoberfest. Hopefully this will make it the best place to find cool Open Source Android projects to contribute to.</p>
   <small>Help improve this website on <a href="https://github.com/TheLastProject/Droidtoberfest">Droidtoberfest</a></small>
   {% for source, apps in apps.items() %}
